added linkedin profile link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>If you have any questions or would like to collaborate on a project, feel free to reach out!</p>
         <ul>
             <li>Email: ravurisomasekhar@gmail.com</li>
-            <li>LinkedIn: <a href="#">linkedin.com/in/johndoe</a></li>
+            <li>LinkedIn: <a href="#">https://linkedin.com/in/ravuri-somasekhar</a></li>
             <li>GitHub: <a href="#">https://github.com/Ravurisomasekhar</a></li>
         </ul>
     </section>
